# tendb

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  tendb.cpp
.github/workflows/: nodejs.yml
js/: CMakeLists.txt  binding.cpp  binding.ts  install.mjs  package-lock.json  package.json  tsconfig.json
js/include/: napi_utils.hpp
js/src/: binding.cpp  binding.js  napi_macros.hpp  napi_utils.hpp
js/test/: test.ts  test_merge.ts  test_numeric.ts  test_read_admin_areas.ts
profiles/: profile_macos-14_arm64_Debug.conf  profile_macos-14_arm64_Release.conf  profile_ubuntu-20.04_x64_Debug.conf  profile_ubuntu-24.04_x64_Release.conf  profile_windows-2022_x64_Debug.conf  profile_windows-2022_x64_Release.conf
src/: allocation.hpp  core_local.hpp  db.hpp  packed_pair.hpp  port.hpp  skip_list.hpp  varint.hpp
src/pbt/: appender.cpp  appender.hpp  environment.cpp  environment.hpp  format.cpp  format.hpp  formats.hpp  options.hpp  pbt.cpp  pbt.hpp  physical.hpp  reader.cpp  reader.hpp  storage.cpp  storage.hpp  writer.cpp  writer.hpp
src/skip_list/: allocation.hpp  skip_list.hpp
test/: db.cpp  pbt.cpp  skip_list.cpp  test_pbt.cpp
